# mineblocks

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  conanfile.txt  premake5.lua
Engine/: CMakeLists.txt
Engine/src/: Engine.hpp  EnginePch.cpp  EnginePch.hpp  enginepch.hpp
Engine/src/Engine/Common/: Log.cpp  Log.hpp  Scheduler.cpp  Scheduler.hpp  Test.cpp  Test.hpp
Engine/src/Engine/Core/: Application.cpp  Application.hpp  Base.hpp  Engine.cpp  Engine.hpp  EntryPoint.cpp  EntryPoint.hpp  Event.cpp  Event.hpp  Lifecycle.cpp  Lifecycle.hpp  Log.cpp  Log.hpp  Module.cpp  Module.hpp
Engine/src/Engine/Core/Event/: Event.cpp  Event.hpp
Engine/src/Engine/Maths/: Time.cpp  Time.hpp
Engine/src/Engine/Util/: ClassAttribs.hpp  Graph.cpp  Graph.hpp  Singleton.hpp  TypeInfo.cpp  TypeInfo.hpp  Version.cpp  Version.hpp
Engine/test/: EngineTestPch.cpp  EngineTestPch.hpp  TestMain.cpp
Engine/test/Engine/Common/: LogTest.cpp  SchedulerTest.cpp  TestTest.cpp
Engine/test/Util/: TestBase.cpp  TestBase.hpp
Mineblocks/: CMakeLists.txt
Mineblocks/src/: App.cpp  App.hpp  MineblocksApp.cpp  MineblocksApp.hpp  mineblocks.hpp
Mineblocks/src/Mineblocks/Core/: Application.hpp
Shaders/: Basic.frag
old/: Test.cpp
shaders/old/: basic.vert
src/: Main.cpp  Pch.hpp  app.cpp  app.hpp  main.cpp
src/Core/: Log.hpp
src/Mineblocks/: Application.cpp  Application.hpp
src/Mineblocks/Common/: Error.cpp  Error.hpp  Log.cpp  Log.hpp
src/Mineblocks/Devices/: Window.cpp  Window.hpp
src/Mineblocks/Maths/: Time.cpp  Time.hpp
src/Mineblocks/Render/: RenderMaster.cpp  RenderMaster.hpp
src/Mineblocks/Render/Shaders/: BasicShader.cpp  BasicShader.hpp  Shader.cpp  Shader.hpp  ShaderLoader.cpp  ShaderLoader.hpp
src/Mineblocks/State/: GameState.cpp  GameState.hpp  PlayingState.cpp  PlayingState.hpp
src/Mineblocks/Util/: FileUtil.cpp  FileUtil.hpp
src/core/: application.cpp  application.hpp
src/devices/: instance.cpp  instance.hpp  logical_device.cpp  logical_device.hpp  physical_device.cpp  physical_device.hpp  surface.cpp  surface.hpp  window.cpp  window.hpp
src/devices/graphics/: instance.cpp  instance.hpp  vulkan_debug.cpp  vulkan_debug.hpp
src/devices/window/: glfw.cpp  glfw.hpp  window.cpp  window.hpp
src/engine/: CMakeLists.txt
src/engine/core/: app.cpp  app.hpp  engine.cpp  engine.hpp  module.cpp  module.hpp
src/engine/devices/: glfw.cpp  glfw.hpp
src/engine/maths/: time.cpp  time.hpp
src/engine/test/: test_module.cpp  test_module.hpp
src/engine/utils/: graph.cpp  graph.hpp  type_info.hpp  version.cpp  version.hpp
src/graphics/: graphics.cpp  graphics.hpp  master_renderer.cpp  master_renderer.hpp
src/graphics/commands/: command_buffer.cpp  command_buffer.hpp  command_pool.cpp  command_pool.hpp
src/graphics/images/: image.cpp  image.hpp
src/graphics/pipelines/: graphics_pipeline.cpp  graphics_pipeline.hpp  shader.cpp  shader.hpp
src/graphics/renderpass/: framebuffers.cpp  framebuffers.hpp  renderpass.cpp  renderpass.hpp  swapchain.cpp  swapchain.hpp
src/maths/: time.cpp  time.hpp
src/mineblocks/: CMakeLists.txt  main.cpp
src/mineblocks/core/: mineblocks.cpp  mineblocks.hpp
src/old/: Main.cpp  Pch.hpp  Shader.cpp  Shader.hpp
src/state/: game_state.cpp  game_state.hpp  playing_state.cpp  playing_state.hpp
src/utils/: app_info.cpp  app_info.hpp  file_util.cpp  file_util.hpp  version.cpp  version.hpp
